k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: dev
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app.sstore.local
      secretName: sstore-tls

  rules:
    - host: app.sstore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
